# delivery-bot

./: .gitignore  Dockerfile  Makefile  README.md  env.template  pipeline.example.json  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml  pipeline.yml
api/: config.py  gh.py  main.py  models.py  pipeline_runner.py  storage.py
cli/: cli.py
scripts/: devserver.sh
tests/: test_api.py  test_config.py  test_errors_and_updates.py  test_github.py  test_github_integration.py  test_models.py  test_pipeline_runner.py  test_pipelines.py  test_storage.py
